--- a/style.css
+++ b/style.css
@@ -52,8 +52,8 @@ body {
     background-color: #0d1527;
 }
 
-#clear-button,
-#delete-button {
+.clear,
+.delete {
     font-weight: 700;
     color: #e5e5e5;
     background-color: #1f335f;
